[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "swoop"
authors = [
    {name = "Jarrett Keifer", email = "jkeifer@element84.com"},
]
description = "STAC Workflow Open Orchestration Framework"
requires-python = ">=3.11"
keywords = [
    "stac",
    "workflow",
    "geospatial",
]
license = {text = "Apache License 2.0"}
classifiers = [
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "fastapi",
]
dynamic = [
  "version",
  "readme",
]

[project.optional-dependencies]
dev = [
    "uvicorn >=0.20.0",
    "pre-commit >=3.1.1",
    "pre-commit-hooks >=4.4.0",
    "black >=23.1.0",
    "ruff >=0.0.253",
    "mypy >=1.0.1",
    "pyupgrade >=3.3.1",
]

[tool.setuptools.dynamic]
version = {attr = "swoop.api.__version__"}
readme = {file = "README.md"}
