[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "swoop"
authors = [
    {name = "Jarrett Keifer", email = "jkeifer@element84.com"},
]
description = "STAC Workflow Open Orchestration Framework"
requires-python = ">=3.11"
keywords = [
    "stac",
    "workflow",
    "geospatial",
]
license = {text = "Apache License 2.0"}
classifiers = [
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "asyncpg >=0.27.0",
    "buildpg >=0.4",
    "fastapi >=0.95.2",
    "minio >=7.1.14",
    "pydantic >=1.10.7",
    "pyyaml >=6.0",
    "swoop.db >=2.0.0",
    "uvicorn >=0.20.0",
]
dynamic = [
  "version",
  "readme",
]

[project.optional-dependencies]
dev = [
    "pre-commit >=3.1.1",
    "pre-commit-hooks >=4.4.0",
    "black >=23.1.0",
    "httpx >=0.24.0",
    "ruff >=0.0.253",
    "mypy >=1.0.1",
    "pip-tools >=6.12.3",
    "pytest >=7.2.2",
    "pytest-asyncio >=0.21.0",
    "pytest-cov >=4.0.0",
    "pyupgrade >=3.3.1",
    "sqlfluff >=2.0.3",
    "isort >=5.12.0",
]

[tool.setuptools.dynamic]
version = {attr = "swoop.api.__version__"}
readme = {file = "README.md"}

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
